--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h1>Happy Birthday, Akbota!</h1>
         <h3>Press "Play" to listen...</h3>
         <audio controls>
-            <source src="spok.mp3" type="audio/mpeg">
+            <source src="photo/spok.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
     </div>
